test/class/invalid/missingSemiColonInField.wacc
begin
  class Dog is
    int x;
    int y
   
    init(int x, int y) is
       self.x = x;
       self.y = y;
    end
  end
  
  println 1

end
   
